2021-03-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Try to avoid critical messages

	* libbalsa/mailbox_imap.c
	  (imap_expunge_idle): handle expunged messages in the order
	    they are expunged;
	  (libbalsa_mailbox_imap_fetch_headers): avoid a critical message.

2021-03-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove a scheduled idle callback at close time instead of at
	dispose time.

	* libbalsa/mailbox_imap.c
	  (libbalsa_mailbox_imap_close): remove expunged idle source, if any;
	  (libbalsa_mailbox_imap_dispose): comment that it should have
	    been removed at close time.

2021-03-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Handle expunged IMAP messages in an idle callback

	* libbalsa/mailbox_imap.c: add an array of expunged messages and
	    an idle id to LibBalsaMailboxImap;
	  (libbalsa_mailbox_imap_init): initialize them;
	  (libbalsa_mailbox_imap_dispose): remove any outstanding idle source;
	  (libbalsa_mailbox_imap_finalize): free the array;
	  (imap_expunge_cb): populate the array, and if necessary schedule the idle
	    callback;
	  (imap_expunge_idle): handle the expunged messages.

2020-12-21  Pawel Salek  <pawsa0@gmail.com>

    * NEWS, configure.ac, meson.build: release balsa-2.6.2


2020-12-19  Pawel Salek  <pawsa0@gmail.com>

    * libbalsa/imap/imap-auth.c: catch errors mid authentication process.
    * libbalsa/imap/imap-commands.c: simplify CAPABILITY handling
    to prevent infinite loops.

2020-12-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: Define the FORTIFY_SOURCE macro only if the
	  optimiztion level is at least 2.

2020-11-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Do not export balsa_window_fix_paned

	* src/main-window.c (bw_fix_panes): it is now local;
	  (bw_set_panes): set the GSource for it;
	* src/main-window.h: do not export it;
	* src/main.c (balsa_activate_cb): do not use it.

2020-11-01  Peter Bloomfield  <pbloomfield@bellsouth.net>
